--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
   "builds": [{ "src": "main.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "main.py" }]
+  "routes": [{ "src": "/(.*)", "dest": "main.py" }],
+  "functions": {
+    "main.py": {
+      "includeFiles": "expansions/**"
+    }
+  }
 }
